--- a/css/site.styl
+++ b/css/site.styl
@@ -41,7 +41,9 @@ body
   letter-spacing: $font-tracking-basic
 
 h1
-  font-size: 3em
+  font-size: 6em
+  line-height: 1.6
+  font-style: italic
 
 h2
   font-size: 2em
@@ -72,6 +74,9 @@ img
   max-width: 100%
   height: auto
 
+#main-container
+  max-width: 700px
+  margin: 0 auto
 
 //the 100% widths are just so stylus can compile delete as desired
 
