--- a/css/site.styl
+++ b/css/site.styl
@@ -47,6 +47,7 @@ h1
 
 h2
   font-size: 2em
+  line-height: 1.6
 
 h3
   font-size: 1.5em
@@ -75,6 +76,9 @@ img
   height: auto
 
 #main-container
+  padding: 30px 10px
+
+#main-content
   max-width: 700px
   margin: 0 auto
 
@@ -86,11 +90,18 @@ img
   width: 100%
 
 // POSTS LOOP
+
 #posts
   width: 100%
 
 .post
   width: 100%
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1)
+  margin-bottom: 60px
+  padding-bottom: 30px
+
+  img
+    max-width: 100%
 
 #pagination
   width: 100%
@@ -102,8 +113,25 @@ img
   width: 100%
 
 
+// UTILITY
+.u-video-wrapper
+  position: relative
+  padding-bottom: 56.25% /* 16:9 */
+  padding-top: 25px
+  height: 0
+
+.u-video-wrapper iframe
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+
 // MEDIA QUERIES
 
 @media screen and (max-width: ($col * $cols)+($gutter * $cols))
   html
     width: 100%
+  
+  h1
+    font-size: 16vw
