--- a/css/site.styl
+++ b/css/site.styl
@@ -78,7 +78,8 @@ img
 #main-container
   padding: 30px 10px
 
-#main-content
+#main-content,
+#footer
   max-width: 700px
   margin: 0 auto
 
@@ -88,6 +89,7 @@ img
 
 #header
   width: 100%
+  text-align: center
 
 // POSTS LOOP
 
@@ -100,17 +102,27 @@ img
   margin-bottom: 60px
   padding-bottom: 30px
 
+  h2
+    text-transform: uppercase
+
   img
     max-width: 100%
 
 #pagination
   width: 100%
+  text-align: center;
+
+  a
+    text-decoration: none
 
 
 // FOOTER
 
 #footer
   width: 100%
+  padding: 30px 0
+  text-align: center
+
 
 
 // UTILITY
