--- a/css/site.css
+++ b/css/site.css
@@ -1054,12 +1054,14 @@ img {
 #main-container {
   padding: 30px 10px;
 }
-#main-content {
+#main-content,
+#footer {
   max-width: 700px;
   margin: 0 auto;
 }
 #header {
   width: 100%;
+  text-align: center;
 }
 #posts {
   width: 100%;
@@ -1070,14 +1072,23 @@ img {
   margin-bottom: 60px;
   padding-bottom: 30px;
 }
+.post h2 {
+  text-transform: uppercase;
+}
 .post img {
   max-width: 100%;
 }
 #pagination {
   width: 100%;
+  text-align: center;
+}
+#pagination a {
+  text-decoration: none;
 }
 #footer {
   width: 100%;
+  padding: 30px 0;
+  text-align: center;
 }
 .u-video-wrapper {
   position: relative;
