add - new fonts

--- a/css/site.styl
+++ b/css/site.styl
@@ -25,8 +25,8 @@ $margin-small = ($gutter)
 $margin-basic = ($gutter*2)
 $margin-large = ($gutter*5)
 
-$font-size-basic = 15px
-$font-leading-basic = 1.35em
+$font-size-basic = 17px
+$font-leading-basic = 1.5em
 $font-tracking-basic = 0.001em
 
 $color-black-soft = rgb(14,14,14)
@@ -35,7 +35,7 @@ $color-white-soft = rgb(253,253,253)
 // TYPOGRAPHY
 
 body
-  font-family:helvetica,arial,sans-serif
+  font-family: 'Oswald', helvetica,arial,sans-serif
   font-size: $font-size-basic
   line-height: $font-leading-basic
   letter-spacing: $font-tracking-basic
@@ -44,16 +44,21 @@ h1
   font-size: 6em
   line-height: 1.6
   font-style: italic
+  font-family: 'Rock Salt', cursive
 
 h2
   font-size: 2em
   line-height: 1.6
+  font-style: italic
+  font-family: 'Rock Salt', cursive
+  margin: 15px 0
 
 h3
   font-size: 1.5em
 
 p
   margin-bottom: 1em
+  font-weight: lighter
 
 
 // LINKS
@@ -61,6 +66,7 @@ p
 a,a:active,a:visited
   color:inherit
   transition:opacity .2s
+  text-decoration: none
   &:hover
     opacity:.5
 
@@ -146,4 +152,4 @@ img
     width: 100%
   
   h1
-    font-size: 16vw
+    font-size: 13vw
