--- a/css/site.css
+++ b/css/site.css
@@ -1011,25 +1011,30 @@ ul.u-inline-list li {
   width: 1256px;
 }
 body {
-  font-family: helvetica, arial, sans-serif;
-  font-size: 15px;
-  line-height: 1.35em;
+  font-family: 'Oswald', helvetica, arial, sans-serif;
+  font-size: 17px;
+  line-height: 1.5em;
   letter-spacing: 0.001em;
 }
 h1 {
   font-size: 6em;
   line-height: 1.6;
   font-style: italic;
+  font-family: 'Rock Salt', cursive;
 }
 h2 {
   font-size: 2em;
   line-height: 1.6;
+  font-style: italic;
+  font-family: 'Rock Salt', cursive;
+  margin: 15px 0;
 }
 h3 {
   font-size: 1.5em;
 }
 p {
   margin-bottom: 1em;
+  font-weight: lighter;
 }
 a,
 a:active,
@@ -1037,6 +1042,7 @@ a:visited {
   color: inherit;
   -webkit-transition: opacity 0.2s;
           transition: opacity 0.2s;
+  text-decoration: none;
 }
 a:hover,
 a:active:hover,
@@ -1108,6 +1114,6 @@ img {
     width: 100%;
   }
   h1 {
-    font-size: 16vw;
+    font-size: 13vw;
   }
 }
