--- a/css/site.styl
+++ b/css/site.styl
@@ -25,7 +25,7 @@ $margin-small = ($gutter)
 $margin-basic = ($gutter*2)
 $margin-large = ($gutter*5)
 
-$font-size-basic = 17px
+$font-size-basic = 20px
 $font-leading-basic = 1.5em
 $font-tracking-basic = 0.001em
 
@@ -44,13 +44,11 @@ h1
   font-size: 6em
   line-height: 1.6
   font-style: italic
-  font-family: 'Rock Salt', cursive
 
 h2
   font-size: 2em
   line-height: 1.6
   font-style: italic
-  font-family: 'Rock Salt', cursive
   margin: 15px 0
 
 h3
@@ -114,13 +112,13 @@ img
   img
     max-width: 100%
 
+  p a
+    text-decoration: underline
+    
+
 #pagination
   width: 100%
   text-align: center;
-
-  a
-    text-decoration: none
-
 
 // FOOTER
 
